@@ -821,3 +821,10 @@
 ===============================================================================
 16 Jul 94: Released TclX7.3b.
 ===============================================================================
+25 Jul 94:
+   o Set errorInfo if initialization fails.
+-------------------------------------------------------------------------------
+ 4 Aug 94:
+   o Changed configure so it doesn't use -lbsd on AIX.  This library contains
+     a broken "pow".
+-------------------------------------------------------------------------------
